Fixed carousel preview cards to prevent tags overflow
Former-commit-id: a2536d3930a217bb5a08ec44b099efdb04491cab

--- a/client/src/app/components/carousel/carousel.component.scss
+++ b/client/src/app/components/carousel/carousel.component.scss
@@ -23,7 +23,7 @@
     -moz-box-sizing: border-box;
     -webkit-box-sizing: border-box;
     width: 282px;
-    height: 382px;
+    height: 402px;
     margin-left: 5px;
     margin-right: 5px;
     border: 3px solid black;
@@ -43,20 +43,20 @@
     margin-left: 5px;
     margin-right: 5px;
     width: 250px;
-    height: 350px;
+    height: 370px;
     cursor: pointer;
 }
 .image-container {
-    width: 180px;
-    height: 180px;
+    width: 155px;
+    height: 155px;
 }
 
 .image {
     position: relative;
     top: 0;
     left: 0;
-    max-width: 175px;
-    max-height: 175px;
+    max-width: 150px;
+    max-height: 150px;
     object-fit: cover;
     transition: transform 150ms cubic-bezier(0.25, 0.46, 0.45, 0.84);
     border-radius: 0.5em;
